# anchor-litesvm-debugger-example

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  wallet.json
native_apps/p-app/: Cargo.toml
native_apps/p-app/src/: lib.rs  tests.rs
native_apps/test-with-mollusk/native_app2/: Cargo.toml
native_apps/test-with-mollusk/native_app2/src/: account_ops.rs  lib.rs  tests.rs
programs/program-a/: Cargo.toml
programs/program-a/src/: lib.rs
programs/program-a/tests/: test_cpi.rs
programs/program-b/src/: lib.rs
tests/: anchor_cpi.ts
