[package]
name = "p_app"
version = "0.1.0"
description = "Simple pinocchio app"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "p_app"

[dependencies]
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3.0"

[dev-dependencies]
litesvm = "0.8.1"
solana-sdk = "3"

[profile.release]
overflow-checks = true
lto = "off"
codegen-units = 1
opt-level = 0
debug = true
[profile.release.build-override]
opt-level = 0
debug = true
incremental = false
codegen-units = 1