[package]
name = "p_app"
version = "0.1.0"
description = "Simple pinocchio app"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "p_app"

[dependencies]
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3.0"

[dev-dependencies]
litesvm = { git = "https://github.com/procdump/litesvm.git", branch = "v0.8.1_feat_dbg_prs", features = [ "sbpf-debugger" ]}
solana-sdk = "3"
solana-svm-transaction = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-callback = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-feature-set = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-timings = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-log-collector = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-measure = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-transaction-context = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-program-runtime = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-bpf-loader-program = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-sbpf = { git = "https://github.com/procdump/sbpf.git", branch = "v0.12.2_feat_dbg_prs" }

[profile.release]
overflow-checks = true
lto = "off"
codegen-units = 1
opt-level = 0
debug = true
[profile.release.build-override]
opt-level = 0
debug = true
incremental = false
codegen-units = 1

[patch.crates-io]
solana-svm-transaction = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-callback = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-feature-set = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-timings = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-log-collector = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-measure = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-transaction-context = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-program-runtime = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-bpf-loader-program = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-sbpf = { git = "https://github.com/procdump/sbpf.git", branch = "v0.12.2_feat_dbg_prs" }