[package]
name = "program-a"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_a"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
litesvm = { git = "https://github.com/procdump/litesvm.git", branch = "v0.8.1_feat_dbg_prs", features = [ "sbpf-debugger" ]}
solana-sdk = "3"
anchor-lang = { version = "0.31.1" }
spl-associated-token-account = "7.0.0"

solana-svm-transaction = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-callback = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-feature-set = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-timings = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-log-collector = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-measure = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-transaction-context = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-program-runtime = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-bpf-loader-program = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-sbpf = { git = "https://github.com/procdump/sbpf.git", branch = "v0.12.2_feat_dbg_prs" }
