[package]
name = "native_app2"
version = "0.1.0"
description = "Test with mollusk app"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "native_app2"

[dependencies]
solana-program = "2"
solana-pubkey = "2"
solana-msg = "2"
solana-program-error = "2"
borsh = "1.5"

# the dev-dependencies mean that they can be used within tests!
[dev-dependencies]

# mollusk related
mollusk-svm-result = "0.7.0"
mollusk-svm = { git = "https://github.com/procdump/mollusk.git", branch = "0.7.0_feat_dbg_prs", features = [ "sbpf-debugger" ]}
solana-sdk = "3.0.0"
solana-program-runtime = "3.0.7"

[profile.release]
overflow-checks = true
lto = "off"
codegen-units = 1
opt-level = 0
debug = true
[profile.release.build-override]
opt-level = 0
debug = true
incremental = false
codegen-units = 1

[patch.crates-io]
solana-svm-transaction = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-callback = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-feature-set = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-timings = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-log-collector = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-svm-measure = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-transaction-context = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-program-runtime = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-bpf-loader-program = { git = "https://github.com/procdump/agave.git", branch = "v3.0.7-feat-dbg-prs" }
solana-sbpf = { git = "https://github.com/procdump/sbpf.git", branch = "v0.12.2_feat_dbg_prs" }